# sqlfactory

./: .gitignore  .gitlab-ci.yaml  .gitlab-ci.yml  README.md  pyproject.toml
sqlbuilder/: __init__.py  column.py  execute.py  logger.py  statement.py
sqlbuilder/condition/: __init__.py  base.py  between.py  in_condition.py  like.py  simple.py
sqlbuilder/delete/: __init__.py  delete.py
sqlbuilder/func/: agg.py  base.py  control.py  misc.py  numeric.py  str.py
sqlbuilder/insert/: __init__.py  insert.py  values.py
sqlbuilder/mixins/: __init__.py  limit.py  order.py  where.py
sqlbuilder/select/: __init__.py  aliased.py  column_list.py  join.py  select.py
sqlbuilder/update/: __init__.py  update.py
sqlfactory/: __init__.py  dialect.py  entities.py  execute.py  statement.py
sqlfactory/condition/: __init__.py  base.py  between.py  case.py  exists.py  in_condition.py  like.py  simple.py
sqlfactory/delete/: delete.py
sqlfactory/func/: __init__.py  agg.py  base.py  datetime.py  info.py  window.py
tests/: test_between.py  test_case.py  test_column.py  test_compound_condition.py  test_cte.py  test_datetime.py  test_delete.py  test_dialect.py  test_enc.py  test_execute.py  test_exists.py  test_expression.py  test_functions.py  test_in.py  test_info.py  test_insert.py  test_join.py  test_like.py  test_limit.py  test_misc.py  test_numeric.py  test_order.py  test_practical_examples.py  test_rlike.py  test_select.py  test_simple_conds.py  test_statement.py  test_subselect.py  test_table.py  test_typing.yml  test_union.py  test_update.py  test_window.py
(+10 files in other folders)
